음악 검색 데이터구축 -황의철

--- a/backends/templates/main/index.html
+++ b/backends/templates/main/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <div class="top_box">
             <div class="search_box">
-                <form action="">
+                <form method="post" action="{% url 'search_and_save_track' %}">
                     <!-- 검색종류 -->
+                    {% csrf_token %}
                     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                     aria-expanded="false">Search</button>
                     <ul class="dropdown-menu">
@@ -20,8 +21,9 @@
                         <li><a class="dropdown-item" href="#">Genre</a></li>
                     </ul>
                     <!-- 검색창 -->
-                    <input type="search" placeholder="검색어를 입력하세요">
+                    <input type="search" name="query" placeholder="검색어를 입력하세요">
                     <!-- 검색버튼 -->
+                    
                     <button type="submit" class="btn btn-secondary"style="
                     border-radius: 0 5px 5px 0">
                         <span class="hide">검색버튼</span>
