--- a/backends/templates/main/list_page.html
+++ b/backends/templates/main/list_page.html
@@ -3,125 +3,80 @@
 {% load static %}
 
 {% block content %}
-    <!-- 메인 -->
-    <section>
-        <div class="container">
-            <div class="playlist">
-                <div class="play">
-                    <!-- <div class="play_img">
-                        <img src="./images/cast02.jpg" alt="노래이미지">
-                    </div> -->
-                    <div class="play_info">
-                        <table class="table table-dark">
-                            <thead>
-                              <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">제목</th>
-                                <th scope="col">앨범</th>
-                                <th scope="col">발매일</th>
-                                <th scope="col">좋아요</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>
-                                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                                    <h3>노래제목</h3>
-                                    <p>가수</p>
-                                </td>
-                                <td>
-                                    <h3>앨범이름</h3>
-                                    <p>장르</p>
-                                </td>
-                                <td>2023.1214</td>
-                                <td>524343</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>
-                                    <img src="./images/cast02.jpg" alt="앨범">
-                                    <h3>노래제목</h3>
-                                    <p>가수</p>
-                                </td>
-                                <td><h3>앨범이름</h3>
-                                    <p>장르</p></td>
-                                <td>2023.1214</td>
-                                <td>524343</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>
-                                    <img src="./images/cast02.jpg" alt="앨범">
-                                    <h3>노래제목</h3>
-                                    <p>가수</p>
-                                </td>
-                                <td><h3>앨범이름</h3>
-                                    <p>장르</p></td>
-                                <td>2023.1214</td>
-                                <td>524343</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>
-                                    <img src="./images/cast02.jpg" alt="앨범">
-                                    <h3>노래제목</h3>
-                                    <p>가수</p>
-                                </td>
-                                <td><h3>앨범이름</h3>
-                                    <p>장르</p></td>
-                                <td>2023.1214</td>
-                                <td>524343</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>
-                                    <img src="./images/cast02.jpg" alt="앨범">
-                                    <h3>노래제목</h3>
-                                    <p>가수</p>
-                                </td>
-                                <td><h3>앨범이름</h3>
-                                    <p>장르</p></td>
-                                <td>2023.1214</td>
-                                <td>524343</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>
-                                    <img src="./images/cast02.jpg" alt="앨범">
-                                    <h3>노래제목</h3>
-                                    <p>가수</p>
-                                </td>
-                                <td><h3>앨범이름</h3>
-                                    <p>장르</p></td>
-                                <td>2023.1214</td>
-                                <td>524343</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div>
-                </div>
-                
+<!-- 메인 -->
+<section>
+  <div class="container">
+    <div class="playlist">
+      <div class="play">
+        <div class="play_info">
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                <th scope="col">No</th>
+                <th scope="col">제목</th>
+                <th scope="col">앨범</th>
+                <th scope="col">발매일</th>
+                <th scope="col">좋아요</th>
+              </tr>
+            </thead>
+            {% for song in song %}
+            <tbody>
+              <tr>
+                <th scope="row">{{ forloop.counter }}</th>
+                <td>
+                  {% if song.album.image %}
+                  <img src="{{ song.album.image }}" alt="{{ song.album.title }}">
+                {% else %}
+                  <img src="{% static 'images/empty-cover.jpg' %}" alt="empty-cover">
+                {% endif %}
+                  <h3>{{ song.title }}</h3>
+                  <p>{{ song.artist.name }}</p>
+                </td>
+                <td>
+                  <h3>{{ song.album.title }}</h3>
+                  <p>{{ song.album.genres }}</p>
+                </td>
+                <td>{{ song.album.release_date }}</td>
+                <td>{{ song.popularity }}</td>
+              </tr>
 
-            </div>
-            <!-- 페이지네이션 -->
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                  <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
-                      <span aria-hidden="true">&laquo;</span>
-                    </a>
-                  </li>
-                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                      <span aria-hidden="true">&raquo;</span>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
+            </tbody>
+            {% empty %}
+            <p> 아직 곡이 없습니다</p>
+            {% endfor %}
+          </table>
+
         </div>
-    </section>
-  {% endblock content %}
+      </div>
+
+
+    </div>
+    <!-- 페이지네이션 -->
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+        {% endif %}
+    
+        {% for num in page_obj.paginator.page_range %}
+          <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+          </li>
+        {% endfor %}
+    
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
+  </div>
+</section>
+{% endblock content %}
