--- a/backends/templates/main/detail_page.html
+++ b/backends/templates/main/detail_page.html
@@ -6,168 +6,155 @@
   <!-- 메인 -->
   <section>
     <div class="container">
-      <div class="select_play">
-        <div class="thumb">
-          <img src="{% static 'images/cast02.jpg' %}" alt="앨범이미지">
+        <div class="select_play">
+            <div class="thumb">
+                <img src="{{ song.album.image }}" alt="{{ song.album.title}}">
+
+            </div>
+            <div class="thumb_info">
+                {% if song %}
+                <div class="song_name">
+                    {{ song.title }}
+                </div>
+                <div class="artist">
+                    {{ song.album.artist.name }}
+                </div>
+                <div class="song_info">
+                    <dl>
+                        <dt>
+                            발매일
+                        </dt>
+                        <dd>
+                            {{ song.album.release_date }}
+                        </dd>
+                        <dt>
+                            장르
+                        </dt>
+                        {% if artist.genres %}
+                        <dd>
+                            {{ artist.genres }}
+                        </dd>
+                        {% else %}
+                        <dd> None</dd>
+                        {% endif %}
+                        <dt>
+                            앨범명
+                        </dt>
+                        <dd>
+                            {{ song.album.title }}
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <p> 검색결과가 없습니다</p>
+        {% endif %}
+
+        <div class="playlist">
+            <div class="play">
+                <div class="play_info">
+                    <table class="table table-dark">
+                        <thead>
+                            <tr>
+                                <th scope="col">No</th>
+                                <th scope="col">제목</th>
+                                <th scope="col">앨범</th>
+                                <th scope="col">발매일</th>
+                                <th scope="col">인기도</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for song in album_songs %}
+                            <tr>
+                                <th scope="row">{{ forloop.counter }}</th>
+                                <td>
+                                    <img src="{{ song.album.image }}" alt="{{ song.album.title }}">
+                                    <h3>{{ song.title }}</h3>
+                                    <p>{{ song.artist.name }}</p>
+                                </td>
+                                <td>
+                                    <h3>{{ song.album.title }}</h3>
+                                    <p>{{ song.album.artist.genres }}</p>
+                                </td>
+                                <td>{{ song.album.release_date }}</td>
+                                <td>{{ song.popularity }}</td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="5">해당 앨범의 곡이 없습니다.</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="play">
+                <div class="play_info">
+                    <table class="table table-dark">
+                        <thead>
+                            <tr>
+                                <th scope="col">No</th>
+                                <th scope="col">제목</th>
+                                <th scope="col">앨범</th>
+                                <th scope="col">발매일</th>
+                                <th scope="col">인기도</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for each_song in each_track %}
+                            <tr>
+                                <th scope="row">{{ forloop.counter }}</th>
+                                <td>
+                                    <img src="{{ each_song.image }}" alt="{{ song.album.title }}">
+                                    <h3>{{ each_song.track_name }}</h3>
+                                    <p>{{ each_song.track_name }}</p>
+                                </td>
+                                <td>
+                                    <h3>{{ each_song.album_name }}</h3>
+                                    <p>{{ song.album.genres }}</p>
+                                </td>
+                                <td>{{ song.album.release_date }}</td>
+                                <td>{{ each_song.popularity }}</td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="5">해당 앨범의 곡이 없습니다.</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
         </div>
-        <div class="thumb_info">
-          <div class="song_name">
-            눈이오자나
-          </div>
-          <div class="artist">
-            박원
-          </div>
-          <div class="song_info">
-            <dl>
-              <dt>
-                발매일
-              </dt>
-              <dd>
-                2023.12.15
-              </dd>
-              <dt>
-                장르
-              </dt>
-              <dd>
-                발라드
-              </dd>
-              <dt>
-                앨범이름
-              </dt>
-              <dd>
-                ost
-              </dd>
-            </dl>
-          </div>
-        </div>
-      </div>
-      <div class="playlist">
-        <div class="play">
-          <!-- <div class="play_img">
-                        <img src="{% static 'images/cast02.jpg' %}" alt="노래이미지">
-                    </div> -->
-          <div class="play_info">
-            <table class="table table-dark">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">제목</th>
-                  <th scope="col">앨범</th>
-                  <th scope="col">발매일</th>
-                  <th scope="col">좋아요</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>
-                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                    <h3>노래제목</h3>
-                    <p>가수</p>
-                  </td>
-                  <td>
-                    <h3>앨범이름</h3>
-                    <p>장르</p>
-                  </td>
-                  <td>2023.1214</td>
-                  <td>524343</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>
-                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                    <h3>노래제목</h3>
-                    <p>가수</p>
-                  </td>
-                  <td>
-                    <h3>앨범이름</h3>
-                    <p>장르</p>
-                  </td>
-                  <td>2023.1214</td>
-                  <td>524343</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>
-                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                    <h3>노래제목</h3>
-                    <p>가수</p>
-                  </td>
-                  <td>
-                    <h3>앨범이름</h3>
-                    <p>장르</p>
-                  </td>
-                  <td>2023.1214</td>
-                  <td>524343</td>
-                </tr>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>
-                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                    <h3>노래제목</h3>
-                    <p>가수</p>
-                  </td>
-                  <td>
-                    <h3>앨범이름</h3>
-                    <p>장르</p>
-                  </td>
-                  <td>2023.1214</td>
-                  <td>524343</td>
-                </tr>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>
-                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                    <h3>노래제목</h3>
-                    <p>가수</p>
-                  </td>
-                  <td>
-                    <h3>앨범이름</h3>
-                    <p>장르</p>
-                  </td>
-                  <td>2023.1214</td>
-                  <td>524343</td>
-                </tr>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>
-                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
-                    <h3>노래제목</h3>
-                    <p>가수</p>
-                  </td>
-                  <td>
-                    <h3>앨범이름</h3>
-                    <p>장르</p>
-                  </td>
-                  <td>2023.1214</td>
-                  <td>524343</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-
-      </div>
-      <!-- 페이지네이션 -->
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+        <!-- 페이지네이션 -->
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+        
+                {% for num in page_obj.paginator.page_range %}
+                    <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% endfor %}
+        
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
-  </section>
+</section>
 {% endblock content %}
