--- a/backends/templates/main/index.html
+++ b/backends/templates/main/index.html
@@ -77,7 +77,7 @@
                     <div class="post">
                         <div class="slider-image">
                             {% if song.album.image %}
-                            <img src="{{ song.album.image }}" alt="{{ song.album.title }}">
+                            <a href="{% url 'music_detail' song.pk %}"><img src="{{ song.album.image }}" alt="{{ song.album.title }}"></a>
                             {% else %}
                             <img src="{% static 'images/empty-cover.jpg' %}" alt="empty-cover">
                             {% endif %}
