페이지별 링크 연결,디테일페이지 수정 -황의철

--- a/backends/frontend/css/main.css
+++ b/backends/frontend/css/main.css
@@ -900,3 +900,10 @@ header .gnb li {
   background-color: var(--button-inactive-background);
   cursor: pointer;
 }
+
+/* artist detail */
+
+.info_detail{
+  margin: 43px 10px;
+  font-size: 35px ;
+}
