--- a/backends/templates/main/index.html
+++ b/backends/templates/main/index.html
@@ -79,7 +79,7 @@
                             {% if song.album.image %}
                             <a href="{% url 'music_detail' song.pk %}"><img src="{{ song.album.image }}" alt="{{ song.album.title }}"></a>
                             {% else %}
-                            <img src="{% static 'images/empty-cover.jpg' %}" alt="empty-cover">
+                            <a href="{% url 'music_detail' song.pk %}"><img src="{% static 'images/empty-cover.jpg' %}" alt="empty-cover"></a>
                             {% endif %}
                         </div>
                     </div>
