--- a/backends/templates/main/search_result.html
+++ b/backends/templates/main/search_result.html
@@ -54,6 +54,7 @@
         <div class="playlist">
             <div class="play">
                 <div class="play_info">
+                    <div class="info_detail"><strong>해당 앨범 수록곡</strong></div>
                     <table class="table table-dark">
                         <thead>
                             <tr>
@@ -92,6 +93,7 @@
 
             <div class="play">
                 <div class="play_info">
+                    <div class="info_detail"><strong>해당 아티스트의 다른 곡</strong></div>
                     <table class="table table-dark">
                         <thead>
                             <tr>
@@ -128,6 +130,7 @@
                 </div>
             </div>
 
+            <p>{{ related_artist }}</p>
         </div>
         <!-- 페이지네이션 -->
         <nav aria-label="Page navigation">
