--- a/backends/templates/main/detail_page.html
+++ b/backends/templates/main/detail_page.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block content %}
-  <!-- 메인 -->
-  <section>
+<!-- 메인 -->
+<section>
     <div class="container">
         <div class="select_play">
             <div class="thumb">
@@ -17,7 +17,7 @@
                     {{ song.title }}
                 </div>
                 <div class="artist">
-                    {{ song.album.artist.name }}
+                    <a href="{% url 'artist_detail' song.album.artist.pk %}">{{ song.album.artist.name }}</a>
                 </div>
                 <div class="song_info">
                     <dl>
@@ -41,7 +41,7 @@
                             앨범명
                         </dt>
                         <dd>
-                            {{ song.album.title }}
+                            <a href="{% url 'album_detail' song.album.pk %}">{{ song.album.title }}</a>
                         </dd>
                     </dl>
                 </div>
@@ -54,6 +54,7 @@
         <div class="playlist">
             <div class="play">
                 <div class="play_info">
+                    <div class="info_detail"><strong>해당 아티스트의 다른 곡</strong></div>
                     <table class="table table-dark">
                         <thead>
                             <tr>
@@ -65,13 +66,13 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for song in album_songs %}
+                            {% for song in other_songs %}
                             <tr>
                                 <th scope="row">{{ forloop.counter }}</th>
                                 <td>
                                     <img src="{{ song.album.image }}" alt="{{ song.album.title }}">
                                     <h3>{{ song.title }}</h3>
-                                    <p>{{ song.artist.name }}</p>
+                                    <p>{{ artist.name }}</p>
                                 </td>
                                 <td>
                                     <h3>{{ song.album.title }}</h3>
@@ -90,68 +91,30 @@
                 </div>
             </div>
 
-            <div class="play">
-                <div class="play_info">
-                    <table class="table table-dark">
-                        <thead>
-                            <tr>
-                                <th scope="col">No</th>
-                                <th scope="col">제목</th>
-                                <th scope="col">앨범</th>
-                                <th scope="col">발매일</th>
-                                <th scope="col">인기도</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for each_song in each_track %}
-                            <tr>
-                                <th scope="row">{{ forloop.counter }}</th>
-                                <td>
-                                    <img src="{{ each_song.image }}" alt="{{ song.album.title }}">
-                                    <h3>{{ each_song.track_name }}</h3>
-                                    <p>{{ each_song.track_name }}</p>
-                                </td>
-                                <td>
-                                    <h3>{{ each_song.album_name }}</h3>
-                                    <p>{{ song.album.genres }}</p>
-                                </td>
-                                <td>{{ song.album.release_date }}</td>
-                                <td>{{ each_song.popularity }}</td>
-                            </tr>
-                            {% empty %}
-                            <tr>
-                                <td colspan="5">해당 앨범의 곡이 없습니다.</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
         </div>
         <!-- 페이지네이션 -->
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 {% if page_obj.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
                 {% endif %}
-        
+
                 {% for num in page_obj.paginator.page_range %}
-                    <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                    </li>
+                <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                </li>
                 {% endfor %}
-        
+
                 {% if page_obj.has_next %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
                 {% endif %}
             </ul>
         </nav>
