앨범목록 생성 -련정

--- a/backends/templates/main/artist_detail_page.html
+++ b/backends/templates/main/artist_detail_page.html
@@ -74,11 +74,13 @@
             </div>
         </div>
 
+        <!-- 앨범목록 수정 -->
+
         <div class="playlist">
             <div class="play">
                 <div class="play_info">
                     <div class="info_detail"><strong>앨범목록</strong></div>
-                    <table class="table table-dark">
+                    <table class="table table-dark card_list">
                         <thead>
                         </thead>
                         <tbody>
