--- a/backends/frontend/css/main.css
+++ b/backends/frontend/css/main.css
@@ -431,11 +431,79 @@ header .gnb li {
 .playlist .play .play_info table td h3 {
   display: block;
   margin-top: 10px;
+  padding: 2px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.playlist .play .play_info table tbody tr td:nth-child(2) > h3 > a{
+  width: 80px;
+}
+.playlist .play .play_info table tbody tr td:nth-child(3) > h3{
+  width: 350px;
+  margin: 10px auto;
 }
 
 .playlist .play .play_info table td p {
   display: inline-block;
   opacity: .6;
+}
+
+/* 앨범목록 (카드형식) */
+.playlist .play .play_info .table.card_list{
+  border: #171818;
+
+  --bs-table-color: #fff;
+  --bs-table-bg: #171818;
+  --bs-table-border-color: #4d5154;
+  --bs-table-striped-bg: #2c3034;
+  --bs-table-striped-color: #fff;
+  --bs-table-active-bg: #373b3e;
+  --bs-table-active-color: #fff;
+  --bs-table-hover-bg: #323539;
+  --bs-table-hover-color: #fff;
+  color: var(--bs-table-color);
+  
+}
+.playlist .play .play_info .table.card_list tbody{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.playlist .play .play_info .table.card_list tr:hover {
+  --bs-table-bg:#171818;
+  --bs-table-border-color: #171818;
+}
+.playlist .play .play_info .table.card_list tbody tr{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  margin: 10px;
+  padding-top: 30px;
+  /* border: 1px solid red; */
+  width: 190px;
+  height: 280px;
+  background: #171818;
+  border-radius: 15px;
+}
+.playlist .play .play_info .table.card_list tbody tr td img{
+  width: 110px;
+}
+.playlist .play .play_info .table.card_list tbody tr td h3{
+  display: block;
+  margin-top: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 5px;
+  width: 165px;
+}
+.playlist .play .play_info .table.card_list tbody tr td:nth-child(3){
+  color: #999;
+  font-weight: 700;
 }
 
 /* 페이지네이션 */
