--- a/backends/templates/main/album_detail_page.html
+++ b/backends/templates/main/album_detail_page.html
@@ -84,16 +84,24 @@
 
             <div class="play">
                 <div class="play_info">
-                    <table class="table table-dark">
+                    <div class="info_detail"><strong>추천 아티스트</strong></div>
+                    <table class="table table-dark card_list">
                         <thead>
-                            <tr>
-                                <th scope="col">No</th>
-                                <th scope="col">제목</th>
-                                <th scope="col">앨범</th>
-                                <th scope="col">발매일</th>
-                                <th scope="col">인기도</th>
-                            </tr>
                         </thead>
+                        <tbody>
+                            {% for art in recommended_artists  %}
+                            <tr>
+                                <td>
+                                    <img src="{{ art.image }}" alt="">
+                                </td>
+                                <td>
+                                    {{ art.name }}
+                                </td>
+                                <td>인기도 {{ art.popularity }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
