--- a/backends/templates/base/base.html
+++ b/backends/templates/base/base.html
@@ -5,12 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- csrftoken -->
+    <meta name="csrf-token" content="{{ csrf_token }}">
+    
     <title>{% block title %}Sixfortypy{% endblock title %}</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/slick.css' %}" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -19,11 +22,13 @@
     <script type="text/javascript" src="{% static 'js/slick.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
+
 </head>
 <body>
     {% block header %}{% endblock header %}
     {% block content %}{% endblock content %}
     {% block footer %}{% endblock footer %}
     {% block profilejs %}{% endblock profilejs %}
+    {% block bookmarkjs %}{% endblock bookmarkjs %}
 </body>
 </html>
