--- a/backends/templates/main/artist_detail_page.html
+++ b/backends/templates/main/artist_detail_page.html
@@ -101,6 +101,32 @@
             </div>
         </div>
 
+        <div class="playlist">
+            <div class="play">
+                <div class="play_info">
+                    <div class="info_detail"><strong>유사 아티스트 추천</strong></div>
+                    <table class="table table-dark card_list">
+                        <thead>
+                        </thead>
+                        <tbody>
+                            {% for recom_artist in recommended_artists %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'artist_detail' recom_artist.pk %}"><img src="{{ recom_artist.image }}" alt="{{ recom_artist.name }}"></a>
+                                </td>
+                                <td>
+                                    <h3><a href="{% url 'artist_detail' recom_artist.pk %}">{{ recom_artist.name }}</a></h3>
+                                </td>
+                                <td>{{ recom_artist.genres }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+
         <!-- 페이지네이션 -->
         <nav aria-label="Page navigation">
             <ul class="pagination">
